syntax = "proto3";

package todo.v1;

import "google/protobuf/timestamp.proto";

option go_package = "godo/gen/todo/v1;todov1";

message Todo {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  bool completed = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message ListTodosRequest {}

message ListTodosResponse {
  repeated Todo todos = 1;
}

message GetTodoRequest {
  string id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message UpdateTodoRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional bool completed = 4;
}

message UpdateTodoResponse {
  Todo todo = 1;
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {}

service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse);
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}
